tests/base/invalid/Return_CompileFail_6.whiley


int f(bool x, bool y):
    return x && !y

